(env
 (dev     (flags :standard -rectypes))
 (release (flags :standard -rectypes -w +27+32)))

(rule
 (targets coq-pkgs)
 ; (mode promote)  - blocked by https://github.com/ocaml/dune/issues/2070
 (deps
  (package coq))
 (action
  (progn
   (run node %{dep:cli.js} %{dep:coq-jslib/metadata/coq-pkgs.json} --nostdlib))))

(rule
 (targets node_modules)
 (deps
   package.json
   package-lock.json)
 (action (run npm install)))

(alias
 (name jscoq)
 (deps
   (source_tree ui-js)
   (source_tree ui-css)
   (source_tree ui-images)
   (source_tree ui-external)
   (source_tree examples)
   index.html
   coq-pkgs
   node_modules
   coq-js/jscoq_worker.js
   jscoq))

(rule
 (targets cli.js)
 (deps
  (source_tree coq-jslib)
  (source_tree ui-js)
  webpack.config.js
  tsconfig.json
  node_modules)
 (action (bash "npx -p webpack -p webpack-cli webpack coq-jslib/cli.ts --colors")))  

(rule
 (targets jscoq)
 (action
  (progn
   (bash "echo \"#!/usr/bin/env node\nrequire('./cli')\" > jscoq")
   (bash "chmod +x jscoq"))))

; Just the worker
(alias
  (name jscoq_worker)
  (deps
    coq-js/jscoq_worker.js))

(dirs (:standard _vendor+*))
